--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,11 @@ jobs:
         run: cargo clippy --all-targets --features alloc -- -D warnings
       - name: tests
         run: cargo test --all-features --all-targets --no-fail-fast --workspace --exclude wincode-fuzz
+
+  fuzz:
+    name: fuzz smoke check (nightly)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: dtolnay/install@cargo-fuzz
+      - run: cargo +nightly fuzz run roundtrip -- -max_total_time=60
